--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
   <!-- Footer-->
   <div id="footer">
-    <p>Georgia Tech Data Science and Analytics Homework</p>
-	<p>Powered by Tanzeania &copy;2018</p>
+   	<p>Data Boot Camp © 2018. All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="assets/js/app.js"></script>
