--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 
   <!-- Footer-->
   <div id="footer">
-   	<p>Data Boot Camp © 2018. All Rights Reserved.</p>
+   	<p>Data Boot Camp</p>
+    <p>UCSDSAN2019DATA1</p>
+    <p> 02-Homework</p>
+    <p> D3 </p>
+    <p> Unit 16 | Assignment - Data Journalism and D3 </p>
   </div>
 
   <script type="text/javascript" src="assets/js/app.js"></script>
