--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
 
-  
-
+<div>
+    1. More Data, More Dynamics
+</div>
+<div>
+    2. Incorporate d3-tip
+</div>
+<div>
+</div>
   <!-- Footer-->
   <div id="footer">
    	<p>Data Boot Camp</p>
