--- a/index.html
+++ b/index.html
@@ -2,6 +2,43 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {margin:0;}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+.main {
+  padding: 16px;
+  margin-top: 30px;
+  height: 1500px; /* Used in this example to enable scrolling */
+}
+</style>
+  
+  
+  
+  
   <meta charset="UTF-8">
   <title>16-Assignment---Data-Journalism-and-D3</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -20,6 +57,14 @@
 </head>
 
 <body>
+
+    <div class="navbar">
+        <a href="https://modelo-bootcamp.github.io/16-Assignment---Data-Journalism-and-D3/">HOME</a>  
+      <a href="https://github.com/Modelo-Bootcamp/16-Assignment---Data-Journalism-and-D3/tree/master/assets">Assets</a>
+        <a href="https://github.com/Modelo-Bootcamp/16-Assignment---Data-Journalism-and-D3">Contact</a>
+      </div>
+      <div class="main">
+
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
@@ -46,6 +91,7 @@
     2. Incorporate d3-tip
 </div>
 <div>
+</div>
 </div>
   <!-- Footer-->
   <div id="footer">
