--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {margin:0;}
     <div class="navbar">
         <a href="https://modelo-bootcamp.github.io/16-Assignment---Data-Journalism-and-D3/">HOME</a>  
       <a href="https://github.com/Modelo-Bootcamp/16-Assignment---Data-Journalism-and-D3/tree/master/assets">Assets</a>
-        <a href="https://github.com/Modelo-Bootcamp/16-Assignment---Data-Journalism-and-D3">Contact</a>
+        <a href="https://github.com/Modelo-Bootcamp/16-Assignment---Data-Journalism-and-D3">ReadME.md</a>
       </div>
       <div class="main">
 
