--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {margin:0;}
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h1>Unit 16 | Assignment - Data Journalism and D3</h1>
       </div>
     </div>
     <div class="row">
